// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContinuityCheckPrompt golden > leaves the marker line out for the generic variant 1`] = `
{
  "system": "한국어 소설의 설정 연속성 검사 도우미다.
[설정]에 명시된 정전(canon) 사실과 본문이 모순되는 구간만 찾아라.
설정에 없는 내용은 추측하지 말고, 명백히 어긋나는 구간만 보고하라.
[설정]에 «장면 좌표» 줄이 있으면 본문의 대목(단독 줄 --- 로 나뉨)마다 그 시각·장소·있는 사람과 어긋나는 구간, 앞 대목보다 이른 시각으로 되돌아가거나 전환 없이 시간이 건너뛴 구간도 설정 모순으로 보고하라.
설명 없이 JSON 배열만 출력하라.
[{"start":0,"end":0,"original":"","reason":"","severity":"high"}]
start/end는 UTF-16 0-based, end는 exclusive다. reason에는 어떤 설정과 어떻게 모순되는지 적어라.
severity는 "high"(설정과 직접 모순) 또는 "low"(모순 의심이나 해석상 양립 가능)로 표기하라.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다

[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > leaves the marker line out for the rich variant 1`] = `
{
  "system": "한국어 소설의 설정 연속성 검사 도우미다.
[설정]에 명시된 정전(canon) 사실과 본문이 모순되는 구간만 찾아라.
설정에 없는 내용은 추측하지 말고, 명백히 어긋나는 구간만 보고하라.
[설정]에 «장면 좌표» 줄이 있으면 본문의 대목(단독 줄 --- 로 나뉨)마다 그 시각·장소·있는 사람과 어긋나는 구간, 앞 대목보다 이른 시각으로 되돌아가거나 전환 없이 시간이 건너뛴 구간도 설정 모순으로 보고하라.
설명 없이 JSON 배열만 출력하라.
[{"start":0,"end":0,"original":"","reason":"","severity":"high"}]
start/end는 UTF-16 0-based, end는 exclusive다. reason에는 어떤 설정과 어떻게 모순되는지 적어라.
severity는 "high"(설정과 직접 모순) 또는 "low"(모순 의심이나 해석상 양립 가능)로 표기하라.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다

[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > leaves the marker line out for the xs variant 1`] = `
{
  "system": "설정(«장면 좌표»의 대목별 시각·장소·있는 사람 포함)과 모순되는 본문 구간만 JSON 배열로 반환: [{"start":0,"end":0,"original":"","reason":"","severity":"high"}] (UTF-16 offset). severity: high=직접 모순, low=의심.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다
[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > renders empty facts for the generic variant 1`] = `
{
  "system": "한국어 소설의 설정 연속성 검사 도우미다.
[설정]에 명시된 정전(canon) 사실과 본문이 모순되는 구간만 찾아라.
설정에 없는 내용은 추측하지 말고, 명백히 어긋나는 구간만 보고하라.
[설정]에 «장면 좌표» 줄이 있으면 본문의 대목(단독 줄 --- 로 나뉨)마다 그 시각·장소·있는 사람과 어긋나는 구간, 앞 대목보다 이른 시각으로 되돌아가거나 전환 없이 시간이 건너뛴 구간도 설정 모순으로 보고하라.
설명 없이 JSON 배열만 출력하라.
[{"start":0,"end":0,"original":"","reason":"","severity":"high"}]
start/end는 UTF-16 0-based, end는 exclusive다. reason에는 어떤 설정과 어떻게 모순되는지 적어라.
severity는 "high"(설정과 직접 모순) 또는 "low"(모순 의심이나 해석상 양립 가능)로 표기하라.",
  "user": "[설정]


[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > renders empty facts for the xs variant 1`] = `
{
  "system": "설정(«장면 좌표»의 대목별 시각·장소·있는 사람 포함)과 모순되는 본문 구간만 JSON 배열로 반환: [{"start":0,"end":0,"original":"","reason":"","severity":"high"}] (UTF-16 offset). severity: high=직접 모순, low=의심.",
  "user": "[설정]

[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > renders scene markers for the generic variant 1`] = `
{
  "system": "한국어 소설의 설정 연속성 검사 도우미다.
[설정]에 명시된 정전(canon) 사실과 본문이 모순되는 구간만 찾아라.
설정에 없는 내용은 추측하지 말고, 명백히 어긋나는 구간만 보고하라.
[설정]에 «장면 좌표» 줄이 있으면 본문의 대목(단독 줄 --- 로 나뉨)마다 그 시각·장소·있는 사람과 어긋나는 구간, 앞 대목보다 이른 시각으로 되돌아가거나 전환 없이 시간이 건너뛴 구간도 설정 모순으로 보고하라.
설명 없이 JSON 배열만 출력하라.
[{"start":0,"end":0,"original":"","reason":"","severity":"high"}]
start/end는 UTF-16 0-based, end는 exclusive다. reason에는 어떤 설정과 어떻게 모순되는지 적어라.
severity는 "high"(설정과 직접 모순) 또는 "low"(모순 의심이나 해석상 양립 가능)로 표기하라.
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다

[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > renders scene markers for the rich variant 1`] = `
{
  "system": "한국어 소설의 설정 연속성 검사 도우미다.
[설정]에 명시된 정전(canon) 사실과 본문이 모순되는 구간만 찾아라.
설정에 없는 내용은 추측하지 말고, 명백히 어긋나는 구간만 보고하라.
[설정]에 «장면 좌표» 줄이 있으면 본문의 대목(단독 줄 --- 로 나뉨)마다 그 시각·장소·있는 사람과 어긋나는 구간, 앞 대목보다 이른 시각으로 되돌아가거나 전환 없이 시간이 건너뛴 구간도 설정 모순으로 보고하라.
설명 없이 JSON 배열만 출력하라.
[{"start":0,"end":0,"original":"","reason":"","severity":"high"}]
start/end는 UTF-16 0-based, end는 exclusive다. reason에는 어떤 설정과 어떻게 모순되는지 적어라.
severity는 "high"(설정과 직접 모순) 또는 "low"(모순 의심이나 해석상 양립 가능)로 표기하라.
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다

[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;

exports[`ContinuityCheckPrompt golden > renders scene markers for the xs variant 1`] = `
{
  "system": "설정(«장면 좌표»의 대목별 시각·장소·있는 사람 포함)과 모순되는 본문 구간만 JSON 배열로 반환: [{"start":0,"end":0,"original":"","reason":"","severity":"high"}] (UTF-16 offset). severity: high=직접 모순, low=의심.
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[설정]
엘리아는 의사다
도시는 항구다
[본문]
<!-- scene: 001 -->
엘리아는 변호사였다.",
}
`;
